# GnSimpleBuild

./: BUILD.gn  hello.cc  hello_shared.cc
basic/: BUILD.gn  construct.cc  construct.h  emplace.cc  main.cc  operator.cc  template.cc  template.h  utils.h  zhineng.cc
foo/: fun_call.cc  instance_of.cc
tutorial/: BUILD.gn  README.md  tutorial.cc
