executable("basic") {
  sources = [
    "main.cc",
    "construct.cc",
    "template.cc",
    "emplace.cc",
    "operator.cc",
    "zhineng.cc"
  ]
  # TODO: 无法指定cpp standard
  #   ERROR at //BUILD.gn:67:3: Undefined identifier.
  #   cflags += ["-std=c++11"]
  #   ^-----
  #   FAILED: build.ninja
  # cflags_cc += ["-std=c++11"]
}